tests/ui/suggestions/dont-suggest-private-trait-method.stderr
error[E0599]: no associated function or constant named `new` found for struct `T` in the current scope
  --> $DIR/dont-suggest-private-trait-method.rs:4:8
   |
LL | struct T;
   | -------- associated function or constant `new` not found for this struct
...
LL |     T::new();
   |        ^^^ associated function or constant not found in `T`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
