tests/ui/suggestions/dont-suggest-private-trait-method.rs
struct T;

fn main() {
    T::new();
    //~^ ERROR no associated function or constant named `new` found
}
